--- a/CV/index.html
+++ b/CV/index.html
@@ -1,3 +1,4 @@
 <!DOCTYPE html>
 <h1>Hello World!</h1>
 
+<a href="https://marcelolopezgallo.github.io/health" target="_blank">Visitar pagina health</a>
